--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon ./bin/www",
-    "webpack": "webpack --mode production --env production"
+    "webpack": "webpack -w --mode production --env production"
   },
   "eslintConfig": {
     "extends": [
