--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "node-json-rpc": "^0.0.1",
     "react-bootstrap": "^2.0.4",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "sequelize": "^7.0.0-alpha.3",
     "sweetalert2": "^11.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "web3": "^1.7.3"
   },
   "peerDependencies": {
     "react": "^17.0.2",
