--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,10 @@
+
 {
   "short_name": "React App",
   "name": "Create React App Sample",
+  "permissions": [
+    "proxy"
+  ],
   "icons": [
     {
       "src": "favicon.ico",
