--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@truffle/hdwallet-provider": "^2.0.4",
+    "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.4",
