--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2",
     "express-static-gzip": "^2.1.7",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
