--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "~1.6.3",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
