--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
+    "emoji-picker-react": "^3.5.1",
     "ethers": "^5.6.2",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
@@ -33,6 +34,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "sequelize": "^7.0.0-alpha.3",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.3.0",
     "web-vitals": "^1.1.2",
     "web3": "^1.7.3"
