--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 
-RewriteCond %{SERVER_PORT} ^8000$
+RewriteCond %{SERVER_PORT} !^2053$
 RewriteRule ^(.*)$ http://127.0.0.1:8000/$1 [P,L]
